# src/main/java/com/abdul/admin/domain/linkedin/model/LinkedinUserInfo.java
@@ -22,4 +22,5 @@ public class LinkedinUserInfo {
     private String tokenType;
     private String picture;
     private LocalDateTime createdAt;
+    private LocalDateTime updatedAt;
 }
